# high-perf-comp

./: .gitignore
hw1/: README.md
hw1/task1/: CMakeLists.txt  Makefile  run_task1.sbatch  run_task1_direct.sbatch  task1  task1.h  task1.hpp
hw1/task1/src/: task1.cpp
hw1/task2/: Makefile  README.md  analyze_results.py  run_task2.sbatch
hw1/task2/data/: scalability_results.csv
hw1/task3/: Makefile  README.md  analyze_results.py  run_task3.sbatch  run_task3_mkl.sbatch
hw1/task4/: AI_DEVELOPMENT_REPORT.md  Makefile  README.md  analyze_results.py  omp_profiling_results.csv  run_task4.sbatch  task4
hw2/: PROJECT_SUMMARY.md  README.md  README.txt  analyze_results.py  create_pdf.sh  requirements.txt  run_all_tasks.sh
hw2/task1/: Makefile  README.md  run_task1.sbatch
hw2/task2a/: Makefile  README.md  run_task2a.sbatch
hw2/task2b/: Makefile  README.md  run_task2b.sbatch
hw2/task2c/: Makefile  README.md  run_task2c.sbatch
hw2/task3/: Makefile  README.md  run_task3.sbatch
hw2/task4/: Makefile  README.md  run_task4.sbatch
hw2/task5/: Makefile  README.md  run_task5.sbatch
hw2/task6/: README.md  profile_shared_memory.sh  run_task6.sbatch
hw3/: FIXES.md  README.md  README.txt  analyze_results.py  requirements.txt  run_all_tasks.sh
hw3/task1/: Makefile  README.md  run_task1.sbatch
hw3/task2/: Makefile  README.md  run_task2.sbatch
hw3/task3/: Makefile  README.md  run_task3.sbatch
hw3/task4/: Makefile  README.md  run_task4.sbatch
hw3/task5/: Makefile  README.md  run_task5.sbatch
hw3/task6/: Makefile  README.md  run_task6.sbatch
(+26 files in other folders)
